add shit loads of comments & small code styling